--- a/styles/almuhira.css
+++ b/styles/almuhira.css
@@ -23,45 +23,61 @@ body {
   /* display: contents; */
   overflow-x: hidden;
 }
+
+/* Pop up on success and onError */
 .message_notifier {
   position: fixed;
   top: 1rem;
   right: 1rem;
   width: 300px;
   z-index: 1000;
-  background-color: #ffe5e5;
   padding: 1rem;
   border-radius: 0.5rem;
   transition: all 0.5s ease;
 }
+.error{
+  background-color: #ffe5e5;
+}
+.success {
+  background-color: #e5ffe6 ;
+}
+
 .message_notifier > .notifier_header {
   position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.notifier_header > h5 {
+.notifier_header > #success{
+  color: #049127;
+  font-size: 1rem;
+}
+.notifier_header > #error {
   color: #b30000;
   font-size: 1rem;
 }
 .notifier_header > span {
   background-color: var(--backGroundColor);
   padding: 0.2rem 0.5rem;
-  display: flex;
-  cursor: pointer;
-  font-weight: 800;
-  align-items: center;
-  justify-content: center;
-  border-radius: 50%;
   position: absolute;
   top: -0.4rem;
   right: -0.4rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  font-weight: 800;
   font-size: 0.8rem;
+  border-radius: 50%;
 }
-.message_main > p {
+.message_notifier > p {
   font-size: 0.7rem;
   text-align: center;
 }
+
+
+/* end Pop up OnSuccess and Onerror */
+
 .home {
   width: 100%;
   height: 100vh;
@@ -574,7 +590,15 @@ textarea {
   border: 1px solid var(--subtitleCOlor);
   border-radius: 0.4rem;
 }
-#button {
+
+
+
+
+
+#submit {
+  display: flex;
+  justify-content: center;
+  gap: .5rem;
   background-color: var(--primaryColor);
   outline: none;
   border: none;
@@ -582,6 +606,26 @@ textarea {
   color: var(--backGroundColor);
   border-radius: 0.4rem;
   cursor: pointer;
+}
+
+.loading{
+  display: none;
+  width: 1.3rem;
+  height: 1.3rem;
+  border-radius: 50%;
+  overflow: hidden;
+  border: solid 2px transparent;
+  border-bottom-color: #ffffff;
+  animation: rotate .7s linear infinite;
+}
+
+@keyframes rotate {
+  0%{
+    transform: rotate(0deg);
+  }
+  100%{
+    transform: rotate(360deg);
+  }
 }
 footer {
   width: 100%;
