--- a/styles/almuhira.css
+++ b/styles/almuhira.css
@@ -15,12 +15,13 @@
   --textColor: #191919;
   --fadeColod: #87d0f2;
   --subtitleCOlor: #8c8a90;
+  --cube_parent_size: clamp(13rem, 9.9209rem + 14.49vw, 20rem);
+  --cube_side_distance: clamp(6.4rem, 4.8169rem + 7.45vw, 10rem);
 }
 body {
   position: relative;
   width: 100vw;
   height: 100vh;
-  /* display: contents; */
   overflow-x: hidden;
 }
 
@@ -35,11 +36,11 @@ body {
   border-radius: 0.5rem;
   transition: all 0.5s ease;
 }
-.error{
+.error {
   background-color: #ffe5e5;
 }
 .success {
-  background-color: #e5ffe6 ;
+  background-color: #e5ffe6;
 }
 
 .message_notifier > .notifier_header {
@@ -48,7 +49,7 @@ body {
   justify-content: center;
   align-items: center;
 }
-.notifier_header > #success{
+.notifier_header > #success {
   color: #049127;
   font-size: 1rem;
 }
@@ -75,7 +76,6 @@ body {
   text-align: center;
 }
 
-
 /* end Pop up OnSuccess and Onerror */
 
 .home {
@@ -97,9 +97,9 @@ body {
   z-index: 1000;
   position: relative;
 }
-.home_navigation_menu > a  {
- width: fit-content;
- height: fit-content;
+.home_navigation_menu > a {
+  width: fit-content;
+  height: fit-content;
   cursor: pointer;
 }
 .home_navigation_menu .menu {
@@ -186,7 +186,7 @@ body {
   width: 100%;
   height: 100%;
   align-items: flex-end;
-  padding-bottom: 2rem;
+  margin-bottom: 2rem;
 }
 .main_text_container {
   height: 100%;
@@ -196,9 +196,9 @@ body {
 }
 .main_container img {
   position: relative;
-  /* bottom: 5.8rem; */
+
   width: 70rem;
-  height: 28rem;
+  height: 30rem;
 }
 #small_text {
   background-color: var(--primaryColor);
@@ -227,7 +227,6 @@ body {
   height: fit-content;
   display: flex;
   flex-direction: column;
-  /* position: relative; */
   background-image: url("../imgs/background1.jpg");
   background-repeat: no-repeat;
   background-position: center;
@@ -298,12 +297,116 @@ body {
   color: var(--secondBackground);
   font-size: 4rem;
   opacity: 0.3;
-  /* background-color: #126e82; */
   padding: 1rem;
 }
 .about_us_main_text > ul > li > p {
   color: var(--backGroundColor);
   text-align: left;
+}
+.who_we_work_with {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  padding-inline: 2rem;
+}
+.txt_container {
+  width: 50%;
+  max-width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 1rem;
+}
+.cube_container {
+  width: 50%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  perspective: 1000px;
+}
+.cube_box {
+  height: var(--cube_parent_size);
+  width: var(--cube_parent_size);
+  transform-style: preserve-3d;
+  animation: animate 15s infinite alternate;
+}
+@keyframes animate {
+  0% {
+    transform: rotateY(180deg);
+  }
+
+  25% {
+    transform: rotateY(90deg);
+  }
+
+  50% {
+    transform: rotateY(-90deg);
+  }
+
+  75% {
+    transform: rotateX(-90deg);
+  }
+
+  100% {
+    transform: rotateX(90deg);
+  }
+}
+.cube_side {
+  position: absolute;
+  border-radius: 0.3rem;
+  width: 100%;
+  height: 100%;
+  border-radius: 0.3rem;
+  font-size: 1.5rem;
+  transition: all 1s;
+}
+.cube_side img {
+  border-radius: 0.3rem;
+  width: 100%;
+  height: 100%;
+}
+.cube_side h2 {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgb(93, 90, 90);
+  background: linear-gradient(
+    180deg,
+    rgba(93, 90, 90, 1) 0%,
+    rgba(255, 255, 255, 0) 40%
+  );
+  border-radius: 0.3rem;
+  color: var(--backGroundColor);
+  padding: 1rem;
+}
+.front {
+  /* position: relative;   */
+  transform: translateZ(var(--cube_side_distance));
+}
+.back {
+  transform: translateZ(calc(-1 * var(--cube_side_distance)));
+}
+.left {
+  right: var(--cube_side_distance);
+  transform: rotateY(-90deg);
+}
+.right {
+  left: var(--cube_side_distance);
+  transform: rotateY(90deg);
+}
+.top {
+  bottom: var(--cube_side_distance);
+  transform: rotateX(90deg);
+}
+.bottom {
+  top: var(--cube_side_distance);
+  transform: rotateX(-90deg);
 }
 
 .statistic_displayer {
@@ -351,7 +454,6 @@ body {
 }
 .Facilities {
   width: 100%;
-  /* max-width: 100px; */
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -527,13 +629,49 @@ body {
   color: var(--backGroundColor);
 }
 
-.contact_us_container {
-  width: 100vw;
-  height: fit-content;
-  padding: 2rem 4rem;
+.contact_us_container_main{
+  width: 100%;
   display: flex;
+  flex-direction: column;
+  height: fit-content;
+  /* background-color: #126e82; */
+}
+.ceo_container{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+  text-align: center;
+  padding-block: 2rem;
+  background-color: var(--secondBackground);
+}
+.ceo_container > img {
+  width: 10rem;
+  height: 10rem;
+  border-radius: 50%;
+  object-fit:cover;
+  border: .2rem solid var(--primaryColor);
+}
+.name_container{
+  display: flex;
+  flex-direction: column;
+  padding-top: 1rem;
+}.name_container> h5{
+  font-size: 1.3rem;
+  font-weight: 600;
+  /* font-family: ; */
+}.name_container > p{
+  font-weight: 700;
+  color: var(--primaryColor);
+}
+
+
+.contact_us_container {
+  width: 100%;
+  height: fit-content;
+  padding: 2rem 3rem;
+  display: flex;
   gap: 2rem;
 }
 .contact_text {
@@ -591,14 +729,10 @@ textarea {
   border-radius: 0.4rem;
 }
 
-
-
-
-
 #submit {
   display: flex;
   justify-content: center;
-  gap: .5rem;
+  gap: 0.5rem;
   background-color: var(--primaryColor);
   outline: none;
   border: none;
@@ -608,7 +742,7 @@ textarea {
   cursor: pointer;
 }
 
-.loading{
+.loading {
   display: none;
   width: 1.3rem;
   height: 1.3rem;
@@ -616,14 +750,14 @@ textarea {
   overflow: hidden;
   border: solid 2px transparent;
   border-bottom-color: #ffffff;
-  animation: rotate .7s linear infinite;
+  animation: rotate 0.7s linear infinite;
 }
 
 @keyframes rotate {
-  0%{
+  0% {
     transform: rotate(0deg);
   }
-  100%{
+  100% {
     transform: rotate(360deg);
   }
 }
@@ -649,6 +783,20 @@ footer {
 }
 
 @media screen and (max-width: 740px) {
+  .who_we_work_with {
+    /* display: flex; */
+    flex-direction: column;
+  }
+  .txt_container {
+    width: 100%;
+  }
+  .cube_box {
+    position: relative;
+    top: -2rem;
+  }
+  .cube_container {
+    width: 100%;
+  }
   .menu {
     position: absolute;
     display: block;
@@ -951,7 +1099,6 @@ footer {
     padding: 0rem 2rem 3rem 2rem;
     flex-wrap: wrap;
   }
-  
 }
 
 .reveal {
