--- a/styles/almuhira.css
+++ b/styles/almuhira.css
@@ -332,7 +332,7 @@ body {
   height: var(--cube_parent_size);
   width: var(--cube_parent_size);
   transform-style: preserve-3d;
-  animation: animate 15s infinite alternate;
+  animation: animate 30s infinite alternate;
 }
 @keyframes animate {
   0% {
@@ -659,11 +659,27 @@ body {
   padding-top: 1rem;
 }.name_container> h5{
   font-size: 1.3rem;
-  font-weight: 600;
-  /* font-family: ; */
+  /* font-weight: 600; */
 }.name_container > p{
   font-weight: 700;
   color: var(--primaryColor);
+  font-size: clamp(0.7rem, 0.5325rem + 0.6700vw, 1rem);
+}
+.contact{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.cnt{
+  display: flex;
+  align-items: center;
+  gap: .2rem ;
+  text-align: center;
+}.cnt p{
+  font-size: clamp(0.7rem, 0.5325rem + 0.6700vw, 1rem);
+  font-weight: 500;
+}.cnt i{
+  font-size:clamp(0.7rem, 0.5325rem + 0.6700vw, 1rem) ;
 }
 
 
