--- a/styles/application.css
+++ b/styles/application.css
@@ -1,11 +1,13 @@
-*::-webkit-scrollbar{
-    width: 4px;
-}*::-webkit-scrollbar-track{
-    background-color: var(--backGroundColor);
-}*::-webkit-scrollbar-thumb{
-    background-color: var(--subtitleCOlor);
-    border-radius: .3rem;
-    border: none;
+*::-webkit-scrollbar {
+  width: 4px;
+}
+*::-webkit-scrollbar-track {
+  background-color: var(--backGroundColor);
+}
+*::-webkit-scrollbar-thumb {
+  background-color: var(--subtitleCOlor);
+  border-radius: 0.3rem;
+  border: none;
 }
 
 .Container {
@@ -132,6 +134,7 @@ input[type="number"]::placeholder {
   padding: 0.2rem 0.6rem;
   display: flex;
   align-items: center;
+  gap: .5rem;
   border-radius: 0.3rem;
   font-size: 0.9rem;
 }
@@ -236,4 +239,6 @@ input[type="number"]::placeholder {
   color: var(--backGroundColor);
   border-radius: 0.3rem;
   cursor: pointer;
+}.steps .hidden{
+    display: none;
 }
