--- a/styles/application.css
+++ b/styles/application.css
@@ -64,10 +64,20 @@ main .notice {
   font-weight: 600;
   width: 15rem;
 }
+textarea {
+  padding-inline: 0.5rem;
+  font-size: 0.7rem;
+  outline: solid 0.1rem var(--subtitleCOlor);
+  border: none;
+  border-radius: 0.3rem;
+  transition: all 0.2s ease;
+  resize: none;
+}
 input[type="text"],
 input[type="tel"],
 input[type="email"],
-input[type="number"] {
+input[type="number"],
+input[type="date"] {
   width: 100%;
   height: 1.7rem;
   padding-inline: 0.5rem;
@@ -80,14 +90,18 @@ input[type="number"] {
 input[type="text"]:focus,
 input[type="tel"]:focus,
 input[type="number"]:focus,
-input[type="email"]:focus {
+input[type="email"]:focus,
+textarea:focus,
+input[type="date"]:focus {
   outline: solid 2px var(--primaryColor);
   border: none;
 }
 input[type="text"],
 input[type="tel"],
 input[type="email"],
-input[type="number"]::placeholder {
+input[type="number"],
+textarea,
+input[type="date"]::placeholder {
   font-size: 0.7rem;
 }
 .notice p {
@@ -134,7 +148,7 @@ input[type="number"]::placeholder {
   padding: 0.2rem 0.6rem;
   display: flex;
   align-items: center;
-  gap: .5rem;
+  gap: 0.5rem;
   border-radius: 0.3rem;
   font-size: 0.9rem;
 }
@@ -239,6 +253,7 @@ input[type="number"]::placeholder {
   color: var(--backGroundColor);
   border-radius: 0.3rem;
   cursor: pointer;
-}.steps .hidden{
-    display: none;
+}
+.steps .hidden {
+  display: none;
 }
